[FE]: multiple fixes and updated img overflow issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,3 +14,10 @@ code {
 .customEditor .ql-container {
   height: 75% !important;
 }
+
+.quill-content img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
